--- a/src/pages/AskoldPage/BlackTeaCollection/BlackTeaCollection.module.css
+++ b/src/pages/AskoldPage/BlackTeaCollection/BlackTeaCollection.module.css
@@ -127,7 +127,8 @@
 }
 
 @media only screen and (min-width: 768px) {
-    .blackTeaCollectionText {
+    .blackTeaCollectionText 
+        {
         font-size: 16px;
         margin-bottom: 16px;
     }
@@ -143,15 +144,6 @@
     .blackTeaCollectionText {
         font-size: 21px;
     }
-}
-.blackTeaCollectionText {
-    text-align: justify;
-        font-size: 15px;
-        line-height: 1.4;
-        color: #888888;
-        text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
-    
-        margin-bottom: 15px;
 }
 .blackTeaCollectionItem:not(:last-child) {
     margin-bottom: 15px;
@@ -196,6 +188,11 @@
     text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
 
     margin-bottom: 15px;
+}
+@media only screen and (min-width: 1024px) {
+    .blackTeaCollectionCompundDesc {
+        font-size: 19px;
+    }
 }
 .blackTeaCollectionCompundItemCircle {
     display: block;
