--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -132,7 +132,6 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
 }
 .link{
     margin-bottom: 20px;
-    
     line-height: 1;
     letter-spacing: 2.56px;
     text-transform: uppercase;
@@ -154,6 +153,7 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
 }
 .link:hover .linkText,
 .link:focus .linkText {
+
     color: white;
     transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
@@ -204,6 +204,7 @@ margin: 0 auto;
     color: #000000;
 
     cursor: pointer;
+    text-align: center;
 }
 @media only screen and (min-width: 768px) {
     .linkText {
@@ -211,11 +212,6 @@ margin: 0 auto;
     font-weight: 400;
     }
 }
-/* .linkText::after {
-    content: '\00BB';
-    font-size: inherit;
-    vertical-align: text-bottom;
-} */
 .date{
     padding: 15px 30px;
     border-top: 1px solid #eaeaea;
