--- a/src/pages/UsefulToKnow/UsefulToKnow.module.css
+++ b/src/pages/UsefulToKnow/UsefulToKnow.module.css
@@ -56,6 +56,7 @@
 @media only screen and (min-width: 1024px) {
 .usefulToKnowItem {
         width: 457px;
+        padding-bottom: 40px;
     }
 }
 @media only screen and (min-width: 1440px) {
@@ -122,7 +123,7 @@
         min-height: 100px;
     }
 }
-.usefulToKnowlink {
+/* .usefulToKnowlink {
     text-transform: uppercase;
     font-size: 12px;
     font-weight: 700;
@@ -139,12 +140,48 @@
     content: '\00BB';
     font-size: inherit;
     vertical-align: text-bottom;
-}
-.link {
-    text-decoration: none;
-    margin-bottom: 20px;
-}
+} */
+
 .usefulToKnowTextBox {
     padding-left: 30px;
     padding-right: 30px;    
+}
+
+
+.link {
+    line-height: 1;
+    letter-spacing: 2.56px;
+    text-transform: uppercase;
+    
+    text-decoration: none;
+    border: 1px solid;
+    box-shadow: 1px 2px 0 0 #474249;
+    padding: 14px 25px;
+    
+    color: #474249;
+    
+    max-width: 155px;
+}
+.link:hover,
+:focus {
+    background-color: #888888;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+
+.link:hover .linkText,
+.link:focus .linkText {
+
+    color: white;
+    transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+.linkText {
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+    color: #000000;
+
+    cursor: pointer;
+    text-align: center;
 }
